--- a/browser/components/controlcenter/content/identityPanel.inc.xhtml
+++ b/browser/components/controlcenter/content/identityPanel.inc.xhtml
@@ -15,9 +15,7 @@
 
   <panelmultiview id="identity-popup-multiView"
                   mainViewId="identity-popup-mainView">
-    <panelview id="identity-popup-mainView"
-               role="document"
-               descriptionheightworkaround="true">
+    <panelview id="identity-popup-mainView" role="document">
       <vbox id="identity-popup-mainView-panel-header">
         <label>
           <html:span id="identity-popup-mainView-panel-header-span" role="heading" aria-level="1"/>
@@ -105,8 +103,7 @@
 
     <!-- Security SubView -->
     <panelview id="identity-popup-securityView"
-               role="document"
-               descriptionheightworkaround="true">
+               role="document">
       <vbox class="identity-popup-security-content">
         <vbox class="identity-popup-security-connection">
           <description class="identity-popup-connection-not-secure security-view"
