Bug 1779695 - Use modern flex on in-content pages. r=Gijs,dao
This fixes the edit bookmarks dialog by properly allowing stuff to wrap once
the dialog width has been fixed.

Let's try to do this and opt-out any specific pages that may hit issues,
rather than opting-in one by one, now that's early in the cycle?

Differential Revision: https://phabricator.services.mozilla.com/D159690

--- a/toolkit/themes/shared/in-content/common-shared.css
+++ b/toolkit/themes/shared/in-content/common-shared.css
@@ -270,6 +270,7 @@
   appearance: none;
   background-color: var(--in-content-page-background);
   color: var(--in-content-page-color);
+  -moz-box-layout: flex;
 }
 
 :root:not(.system-font-size) {
