Bug 1779695 - Use modern flex on in-content pages. r=Gijs,dao,preferences-reviewers
This fixes the edit bookmarks dialog by properly allowing stuff to wrap once
the dialog width has been fixed.

Let's try to do this and opt-out any specific pages that may hit issues,
rather than opting-in one by one, now that's early in the cycle?

Differential Revision: https://phabricator.services.mozilla.com/D159690

--- a/browser/themes/shared/preferences/dialog.css
+++ b/browser/themes/shared/preferences/dialog.css
@@ -9,6 +9,8 @@ dialog {
   color: var(--in-content-page-color);
   margin: 0;
   padding: 0;
+  min-width: 0;
+  min-height: 0;
 }
 
 /* Put padding around the contents of the dialog, but do that on `body`
@@ -33,6 +35,8 @@ dialog::part(content-box) {
 .contentPane.doScroll,
 dialog.doScroll::part(content-box) {
   overflow-y: auto;
+  min-width: 0;
+  min-height: 0;
 }
 
 tree:not(#rejectsTree) {
