Bug 1793359 - Simplify bookmarks popup placement. r=Itiel,dao,mak
By using delegatesanchor="true", we delegate the anchor node to the
first in-flow box (that is the icon), simplifying a lot of the
hard-coded margins in the CSS.

Do that, plus make menupopup[type="arrow"] work consistently, to
simplify the styling of the bookmarks popup a bit.

Differential Revision: https://phabricator.services.mozilla.com/D158569

--- a/toolkit/themes/linux/global/popup.css
+++ b/toolkit/themes/linux/global/popup.css
@@ -30,7 +30,7 @@ menupopup > menu > menupopup {
 
 /* ::::: arrow panel ::::: */
 
-panel[type="arrow"] {
+:is(panel, menupopup)[type="arrow"] {
   border: none;
   background-color: transparent;
 }
