--- a/toolkit/themes/windows/global/popup.css
+++ b/toolkit/themes/windows/global/popup.css
@@ -74,7 +74,7 @@ menupopup > menu > menupopup {
   margin-top: var(--nested-margin);
 }
 
-panel[type="arrow"] {
+:is(panel, menupopup)[type="arrow"] {
   appearance: none;
   background: transparent;
   border: none;
