--- a/browser/components/controlcenter/content/protectionsPanel.inc.xhtml
+++ b/browser/components/controlcenter/content/protectionsPanel.inc.xhtml
@@ -159,8 +159,7 @@
     <!-- Site Not Working? SubView -->
     <panelview id="protections-popup-siteNotWorkingView"
                role="document"
-               data-l10n-id="protections-panel-site-not-working-view"
-               flex="1">
+               data-l10n-id="protections-panel-site-not-working-view">
         <hbox id="protections-popup-siteNotWorkingView-header">
           <vbox class="protections-popup-tp-switch-label-box" flex="1">
             <label class="protections-popup-tp-switch-on-header"
