Bug 1796944 - Fix the URL field in the Report a Broken Site UI being too short r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D159973

--- a/browser/themes/shared/controlcenter/panel.css
+++ b/browser/themes/shared/controlcenter/panel.css
@@ -419,7 +419,7 @@ description#identity-popup-content-verifier,
 #protections-popup-sendReportView-collection-url {
   appearance: none;
   border: none;
-  margin: 4px auto;
+  margin: 4px 0;
 }
 
 #protections-popup-sendReportView-collection-comments {
