Bug 1796915 - Use contain rather than min-{width,height} for scrollable dialogs. r=desktop-theme-reviewers,dao
If you have an explicit contentPane _and_ a dialog, you would still need
the content-box to have min-height: 0 in order for the content-pane to
be properly scrollable. Adding that unconditionally would break the
measurement to begin with. contain: size is a simpler fix here.

Do some surrounding cleanup while at it.

Differential Revision: https://phabricator.services.mozilla.com/D160072

--- a/browser/themes/shared/preferences/dialog.css
+++ b/browser/themes/shared/preferences/dialog.css
@@ -9,8 +9,6 @@ dialog {
   color: var(--in-content-page-color);
   margin: 0;
   padding: 0;
-  min-width: 0;
-  min-height: 0;
 }
 
 /* Put padding around the contents of the dialog, but do that on `body`
@@ -22,12 +20,9 @@ body {
   padding: 6px;
 }
 
-.contentPane {
-  -moz-box-flex: 1;
-}
-
 .contentPane,
 dialog::part(content-box) {
+  -moz-box-flex: 1;
   /* This allows the focus ring to display fully when scrolling is enabled. */
   padding: 4px;
 }
@@ -35,8 +30,7 @@ dialog::part(content-box) {
 .contentPane.doScroll,
 dialog.doScroll::part(content-box) {
   overflow-y: auto;
-  min-width: 0;
-  min-height: 0;
+  contain: size;
 }
 
 tree:not(#rejectsTree) {
