Bug 1790490 - Added alt tag div & strings for MR onboarding images r=mviar,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D159770

--- a/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
@@ -549,6 +549,10 @@ html {
   text-shadow: none;
   margin-inline: 40px 0;
 }
+.onboardingContainer .screen[pos=split] .section-secondary .image-alt {
+  width: inherit;
+  height: inherit;
+}
 .onboardingContainer .screen[pos=split] .section-secondary .hero-image {
   flex: 1;
   display: flex;
