Bug 1797052 - Improve behavior of customize mode in small windows. r=Gijs
There was only a min-height: 0 missing. I also cleaned-up a bit because
flex: 1 is the same as flex: 1 1 auto, and flex attribute (which only
sets -moz-box-flex) is not doing anything because it was inside flex
layout (so legacy properties aren't looked at).

Differential Revision: https://phabricator.services.mozilla.com/D160094

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1172,6 +1172,7 @@ toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > .toolbarbut
 #customization-container {
   -moz-box-orient: horizontal;
   flex-direction: column;
+  min-height: 0;
 }
 
 #customization-container:not([hidden]) {
@@ -1192,7 +1193,7 @@ toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > .toolbarbut
 }
 
 #customization-panelHolder > #widget-overflow-fixed-list {
-  flex: 1 1 auto; /* Grow within the available space, and allow ourselves to shrink */
+  flex: 1; /* Grow within the available space, and allow ourselves to shrink */
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -1208,7 +1209,7 @@ toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > .toolbarbut
 }
 
 #customization-panelWrapper {
-  flex: 1 1 auto;
+  flex: 1;
   height: 0; /* Don't let my contents affect ancestors' content-based sizing */
   align-items: end; /* align to the end on the cross-axis (affects arrow) */
 }
