Bug 1791474 - show more specific message for locked primary password error r=sfoster,fluent-reviewers
* Updated the error message to use the text [here](https://www.figma.com/file/SE4xHgOW84yLiv7vFugm9R/Firefox-View-Stepping-Stone)
* Updated the existing password test to verify the message contents

Differential Revision: https://phabricator.services.mozilla.com/D159787

--- a/browser/components/firefoxview/firefoxview.html
+++ b/browser/components/firefoxview/firefoxview.html
@@ -41,6 +41,7 @@
             <section>
               <p>
                 <span id="error-state-description"></span>
+                <a id="error-state-link" target="_blank" hidden></a>
               </p>
               <button id="error-state-button" class="primary"></button>
             </section>
